fixed warning from error prune in api-gateway